# rolly

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Doxyfile  Doxyfile-mcss  Justfile  LICENSE  Puff.toml  README.md  README_8md.html  Rolly.tagfile.xml  all_8h.html  angle_8h.html  annotated.html  any__of_8h.html  base_8h.html  basic__hasher_8h.html  bit_8h.html  box_8h.html  bug.html  char__reader_8h.html  char__utils_8h.html  charconv_8h.html  classconnection.html  classconnection__blocker.html  classdetail_1_1copy__on__write.html  classdetail_1_1slot.html  classdetail_1_1slot__base.html  classdetail_1_1slot__extended.html  classdetail_1_1slot__pmf.html  classdetail_1_1slot__pmf__extended.html  classdetail_1_1slot__pmf__tracked.html  classdetail_1_1slot__state.html  (+490 more)
.doc/: poxy.toml
.doc/tagfiles/: qt5-core.tag.xml  qt5-gui.tag.xml  qt5-qml.tag.xml  qt5-quick.tag.xml
.github/workflows/: build.yml  doc.yml  doxygen-gh-pages.yml  gh-pages.yaml  test.yml
.gitlab/: build-astra.yml  build-ubuntu.yml  build-windows.yml  dependencies-astra.yml  doxygen.yml  install.yml  integration-test-astra.yml
.puff/: recipe.yml
cmake/: rolly-config.cmake.in
doxygen/: Dockerfile  header.html
examples/: CMakeLists.txt
examples/dll/: CMakeLists.txt
examples/dll/host/: CMakeLists.txt  main.cc
examples/dll/interface/: CMakeLists.txt
examples/dll/interface/include/plugin-api/: api.h
examples/dll/plugin/: CMakeLists.txt  plugin.cc
include/leaf/: assert.h  casts.h  conversion.h  global.h  leaf.h  logger.h  math.h  memory.h  os.h  reflect.h  traits.h
include/leaf/definitions/: platform.h
include/leaf/global/: definitions.h  expected.h  log.h  logconfig.h  result.h  sourcelocation.h  types.h
include/leaf/pattern/: iobservable.h  iobserver.h
include/leaf/rs/: result.h
include/leaf/utils/: elapsed.h  enum.h  noexcept.h  ranges.h  rtti.h
include/lf/: config.h  directories.h  leaf.h  logger.h
include/lf/detail/: assert.h  backports.h  corefn.h  export.h  log.h  math.h  memory.h  os.h  platform.h  traits.h  types.h
include/rll/: all.h  bit.h  concepts.h  config.h  contracts.h  crypto.h  directories.h  euclid.h  exception.h  fixed_string.h  functional.h  global.h  library.h  log.h  math.h  memory.h  net.h  numbers.h  pimpl.h  qt.h  result.h  rtti.h  savefile.h  serialization.h  source_location.h  stdint.h  string_util.h  traits.h  type_traits.h  types.h  u128.h  utility.h  uuid.h
include/rll/concepts/: any_of.h  enum.h  num.h  ptr.h  standard_copyable_and_movable.h  threading.h
include/rll/crypto/: basic_hasher.h  md5.h
include/rll/euclid/: angle.h  point2d.h  size2d.h  vector2d.h  velocity.h
include/rll/functional/: lazy.h  overload.h  scope_guard.h
include/rll/global/: char_utils.h  charconv.h  definitions.h  export.h  groups.dox  mainpage.dox  platform_definitions.h  semver.h  version.h  version_definitions.h
include/rll/impl/: char_reader.h
include/rll/io/: filedevice.h
include/rll/memory/: box.h  deleter.h  observer_ptr.h  owner.h  propagate_const.h
include/rll/net/: ip_address.h
include/rll/qt/: concepts.h  format.h  formatters.h  literals.h  qml.h  registrable.h
include/rll/serialization/: tags.h
include/rll/traits/: noncopyable.h  nonmovable.h  pimpl.h  pin.h  singleton.h
include/rll/types/: guid.h  optional.h  point2d.h  size2d.h  u128.h  vector2d.h
include/rolly/: all.h  bit.h  concepts.h  config.h  contracts.h  directories.h  dll.h  exception.h  format.h  functional.h  global.h  library.h  log.h  math.h  memory.h  net.h  numbers.h  prelude.h  qt.h  rolly.h  rtti.h  savefile.h  serialization.h  source_location.h  span.h  string_util.h  traits.h  type_traits.h  types.h  utility.h
include/rolly/concepts/: any_of.h  enum.h  num.h  ptr.h  standard_copyable_and_movable.h  threading.h
include/rolly/dll/: dl.h  plugin.h  plugin_loader.h  shared_library.h
include/simkernel/: global.h  os.h  traits.h
public/: leaf.index
scripts/: README.md  tag.py  utl.py
src/: contracts.cc  directories.cc  library.cc  rtti.cc  string_util.cc  uuid.cc
src/c++/: directories.cc  logger.c++  logger.cc
src/crypto/: md5.cc
src/dll/: dl.cc  plugin_loader.cc  shared_library.cc
src/net/: ipaddress_v4.cc
src/oslayer/: base.h  dlfcn.h  dll.h  inet.h  library.h
src/types/: guid.cc
tests/: CMakeLists.txt  test-casts.cc  test-config.cc  test-expected.cc  test-main.c++  test-main.cc  test-panic.cc  test.cpp2  test_bit.cc  test_config.cc  test_crypto.cc  test_crypto.cc~  test_directories.cc  test_functional.cc  test_guid.cc  test_library.cc  test_memory.cc  test_net.cc  test_qt.cc  test_qt.h  test_rtti.cc  test_serialization.cc  test_span.cc  test_types.cc  test_version.cc
xml/: README_8md.xml  angle_8h.xml  any__of_8h.xml  bit_8h.xml  box_8h.xml  bug.xml  char__utils_8h.xml  charconv_8h.xml  classconnection.xml  classconnection__blocker.xml  classdetail_1_1copy__on__write.xml  classdetail_1_1slot.xml  classdetail_1_1slot__base.xml  classdetail_1_1slot__extended.xml  classdetail_1_1slot__pmf.xml  classdetail_1_1slot__pmf__extended.xml  classdetail_1_1slot__pmf__tracked.xml  classdetail_1_1slot__state.xml  classdetail_1_1slot__tracked.xml  classrolly_1_1application__dirs.xml  classrolly_1_1bad__optional__access.xml  classrolly_1_1box.xml  classrolly_1_1configuration__file.xml  classrolly_1_1detail_1_1scope__guard_3_01Callback_01_4.xml  classrolly_1_1dirs.xml  classrolly_1_1dll_1_1plugin.xml  classrolly_1_1dll_1_1plugin__loader.xml  classrolly_1_1dll_1_1shared__library.xml  classrolly_1_1exceptions_1_1compile__time__error.xml  classrolly_1_1exceptions_1_1deserialization__error.xml  classrolly_1_1exceptions_1_1serialization__error.xml  classrolly_1_1io_1_1filedevice.xml  classrolly_1_1meta_1_1project__meta.xml  classrolly_1_1observer__ptr.xml  classrolly_1_1optional.xml  classrolly_1_1optional_3_01T_01_6_01_4.xml  classrolly_1_1propagate__const.xml  classrolly_1_1qt_1_1qml_1_1module.xml  classrolly_1_1qt_1_1qml_1_1registrable.xml  classrolly_1_1savefile.xml  (+226 more)
(+105 files in other folders)
